This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Framework build broken in 3.2 brunk
Type: compile error Stage: resolved
Components: Build, macOS Versions: Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: ronaldoussoren Nosy List: georg.brandl, ronaldoussoren
Priority: release blocker Keywords:

Created on 2010-04-18 14:09 by ronaldoussoren, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (2)
msg103491 - (view) Author: Ronald Oussoren (ronaldoussoren) * (Python committer) Date: 2010-04-18 14:09
I cannot build a framework build of the 3.2 branch at the moment due to unresolved references to "_Py_char2wchar" when linking the dylib that gets placed into the framework:

Undefined symbols:
  "__Py_char2wchar", referenced from:
      _Py_Main in libpython3.2.a(main.o)
ld: symbol(s) not found
collect2: ld returned 1 exit status
Undefined symbols:
  "__Py_char2wchar", referenced from:
      _Py_Main in libpython3.2.a(main.o)
ld: symbol(s) not found
collect2: ld returned 1 exit status


This is because that symbol is defined in Modules/python.c which doesn't get linked into the shared library.
msg103493 - (view) Author: Ronald Oussoren (ronaldoussoren) * (Python committer) Date: 2010-04-18 14:48
Fixed in r80181 (3.2)
History
Date User Action Args
2022-04-11 14:57:00adminsetnosy: + georg.brandl
github: 52688
2010-04-18 14:48:31ronaldoussorensetstatus: open -> closed
type: compile error
messages: + msg103493

resolution: fixed
stage: resolved
2010-04-18 14:09:26ronaldoussorensetcomponents: + Build
2010-04-18 14:09:02ronaldoussorencreate