Move _Py_char2wchar from python.c to main.c.

This fixes issue #8441: python.c is not included
in the framework while main.c is and without this
patch you get a link error when building
Python.framework on OSX.