Include/Python.h
@@ -126,7 +126,7 @@ extern "C" {
 /* _Py_Mangle is defined in compile.c */
 PyAPI_FUNC(PyObject*) _Py_Mangle(PyObject *p, PyObject *name);
 
-/* _Py_char2wchar lives in python.c */
+/* _Py_char2wchar lives in main.c */
 PyAPI_FUNC(wchar_t *) _Py_char2wchar(char *);
 #ifdef __cplusplus
 }
